--- a/index.html
+++ b/index.html
@@ -1,9 +1,351 @@
 <!DOCTYPE html>
 <html lang="zh-TW">
 <head>
-<meta charset="UTF-8" />
-<title>AI 行事曆 + 聊天助手</title>
-<!-- placeholder minimal -->
+  <meta charset="UTF-8" />
+  <title>AI 行事曆 + 聊天助手</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: "Segoe UI", sans-serif;
+      background: #0a0f24;
+      color: #e2e8f0;
+      display: flex;
+      justify-content: center;
+      padding: 40px;
+    }
+
+    /* ✨ LOGO */
+    .logo {
+      font-size: 26px;
+      font-weight: bold;
+      color: #00eaff;
+      text-shadow: 0 0 10px #00eaff;
+      margin-bottom: 15px;
+      text-align: center;
+    }
+
+    .container {
+      width: 100%;
+      max-width: 750px;
+      background: rgba(20, 30, 60, 0.6);
+      padding: 30px;
+      border-radius: 20px;
+      border: 1px solid rgba(0, 200, 255, 0.4);
+      box-shadow: 0 0 25px rgba(0, 200, 255, 0.25);
+      backdrop-filter: blur(12px);
+    }
+
+    h1 {
+      text-align: center;
+      color: #00d9ff;
+      text-shadow: 0 0 10px #00d9ff;
+      margin-top: 0;
+    }
+
+    .tabs {
+      display: flex;
+      margin-bottom: 20px;
+    }
+
+    .tab {
+      flex: 1;
+      padding: 12px;
+      text-align: center;
+      cursor: pointer;
+      border: 1px solid rgba(0,200,255,0.3);
+      color: #00d9ff;
+      font-weight: bold;
+    }
+
+    .tab.active {
+      background: rgba(0,200,255,0.2);
+      border-bottom: 3px solid #00e5ff;
+    }
+
+    .section { display: none; }
+    .section.active { display: block; }
+
+    .upload-box {
+      border: 2px dashed #00d9ff;
+      padding: 20px;
+      text-align: center;
+      border-radius: 15px;
+      cursor: pointer;
+    }
+
+    /* ✨ Loading 霓虹動畫 */
+    #loading {
+      margin-top: 15px;
+      text-align: center;
+      display: none;
+    }
+
+    .spinner {
+      width: 40px;
+      height: 40px;
+      border: 4px solid rgba(0,200,255,0.3);
+      border-top: 4px solid #00eaff;
+      border-radius: 50%;
+      animation: spin 1s linear infinite;
+      margin: auto;
+    }
+    @keyframes spin {
+      100% { transform: rotate(360deg); }
+    }
+
+    /* ✨ Chat UI（LINE 風格） */
+    #chat-box {
+      height: 350px;
+      overflow-y: auto;
+      padding: 15px;
+      background: rgba(255,255,255,0.05);
+      border-radius: 12px;
+      border: 1px solid rgba(0,200,255,0.3);
+      margin-bottom: 10px;
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+    }
+
+    .msg {
+      max-width: 80%;
+      padding: 12px 14px;
+      border-radius: 12px;
+      line-height: 1.5;
+      font-size: 15px;
+    }
+
+    .me {
+      background: #00c2ff;
+      color: #000;
+      align-self: flex-end;
+      text-align: right;
+      border-bottom-right-radius: 2px;
+    }
+
+    .bot {
+      background: rgba(255,255,255,0.15);
+      border: 1px solid rgba(0,200,255,0.4);
+      border-bottom-left-radius: 2px;
+    }
+
+    #chat-input {
+      width: calc(100% - 70px);
+      padding: 12px;
+      border-radius: 8px;
+      border: none;
+      font-size: 16px;
+    }
+
+    .chat-area {
+      display: flex;
+      gap: 10px;
+    }
+
+    .img-btn {
+      width: 50px;
+      height: 50px;
+      background: rgba(0,200,255,0.35);
+      border-radius: 10px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      cursor: pointer;
+      border: 1px solid rgba(0,200,255,0.5);
+      font-size: 20px;
+    }
+
+    button {
+      width: 100%;
+      margin-top: 20px;
+      padding: 15px;
+      font-size: 17px;
+      background: #00c2ff;
+      border: none;
+      border-radius: 10px;
+      cursor: pointer;
+      color: #000;
+      font-weight: bold;
+      transition: 0.2s;
+    }
+
+    button:hover {
+      background: #00e8ff;
+      box-shadow: 0 0 10px #00e8ff;
+    }
+
+    #result {
+      white-space: pre-wrap;
+      background: rgba(255,255,255,0.05);
+      padding: 20px;
+      border-radius: 10px;
+      margin-top: 20px;
+      border: 1px solid rgba(0,200,255,0.3);
+    }
+  </style>
 </head>
-<body>AI site placeholder</body>
-</html>
+
+  <body>
+  <div class="container">
+
+    <div class="logo">🛸 AI Schedule</div>
+    <h1>AI 行事曆 + 聊天助手</h1>
+
+    <div class="tabs">
+      <div class="tab active" onclick="switchTab('calendar')">📅 行事曆解析</div>
+      <div class="tab" onclick="switchTab('chat')">💬 聊天模式</div>
+    </div>
+
+    <!-- 行事曆解析 -->
+    <div id="calendar" class="section active">
+      <label class="upload-box">
+        <input type="file" id="img" style="display:none;">
+        📸 點擊上傳行事曆圖片
+      </label>
+
+      <button onclick="analyze()">解析行事曆</button>
+
+      <div id="loading">
+        <div class="spinner"></div>
+        <div style="margin-top:8px;">AI 正在解析中...</div>
+      </div>
+
+      <pre id="result"></pre>
+    </div>
+
+    <!-- 聊天模式 -->
+    <div id="chat" class="section">
+      <div id="chat-box"></div>
+
+      <div class="chat-area">
+        <input id="chat-input" placeholder="輸入訊息..." />
+
+        <!-- 圖片聊天 -->
+        <label class="img-btn">
+          📷
+          <input type="file" id="chat-img" style="display:none;">
+        </label>
+      </div>
+
+      <button onclick="sendChat()">送出</button>
+    </div>
+  </div>
+</body>
+
+  <script>
+const API_KEY = "AIzaSyAAknI6q-TMwZyKiVKQdbT6lrtBHL5k0Vk";
+
+/* 分頁切換 */
+function switchTab(tab) {
+  document.querySelectorAll('.tab').forEach(t => t.classList.remove('active'));
+  document.querySelectorAll('.section').forEach(s => s.classList.remove('active'));
+
+  document.querySelector(`.tab[onclick="switchTab('${tab}')"]`).classList.add('active');
+  document.getElementById(tab).classList.add('active');
+}
+
+/* ========= 行事曆解析 ========= */
+async function analyze() {
+  const file = document.getElementById("img").files[0];
+  if (!file) return alert("請上傳圖片");
+
+  document.getElementById("loading").style.display = "block";
+
+  const formData = new FormData();
+  formData.append("file", file);
+
+  const uploadRes = await fetch(
+    `https://generativelanguage.googleapis.com/upload/v1beta/files?key=${API_KEY}`,
+    { method: "POST", body: formData }
+  );
+
+  const uploadData = await uploadRes.json();
+  const fileUri = uploadData.file.uri;
+
+  const prompt = `
+你是行事曆分析助手，請把圖片內的行程整理成：
+
+📅 星期幾
+HH:MM-HH:MM：活動名稱
+`;
+
+  const aiRes = await fetch(
+    `https://generativelanguage.googleapis.com/v1beta/models/gemini-1.5-flash:generateContent?key=${API_KEY}`,
+    {
+      method: "POST",
+      headers: {"Content-Type": "application/json"},
+      body: JSON.stringify({
+        contents: [{
+          parts: [
+            {text: prompt},
+            {fileData: {fileUri}}
+          ]
+        }]
+      })
+    }
+  );
+
+  const data = await aiRes.json();
+  document.getElementById("loading").style.display = "none";
+
+  document.getElementById("result").textContent =
+    data.candidates?.[0]?.content?.parts?.[0]?.text || "解析失敗";
+}
+
+/* ========= 聊天功能 ========= */
+
+async function sendChat() {
+  const input = document.getElementById("chat-input");
+  const text = input.value.trim();
+  const img = document.getElementById("chat-img").files[0];
+
+  if (!text && !img) return;
+
+  if (text) addMsg(text, "me");
+  input.value = "";
+
+  let parts = [];
+  if (text) parts.push({ text });
+
+  /* 如果有上傳圖片 → 先上傳圖片 */
+  if (img) {
+    const fd = new FormData();
+    fd.append("file", img);
+
+    const upload = await fetch(
+      `https://generativelanguage.googleapis.com/upload/v1beta/files?key=${API_KEY}`,
+      { method: "POST", body: fd }
+    );
+    const uploadData = await upload.json();
+    parts.push({ fileData: { fileUri: uploadData.file.uri } });
+
+    addMsg("📷（圖片已上傳）", "me");
+    document.getElementById("chat-img").value = "";
+  }
+
+  const aiRes = await fetch(
+    `https://generativelanguage.googleapis.com/v1beta/models/gemini-1.5-flash:generateContent?key=${API_KEY}`,
+    {
+      method: "POST",
+      headers: { "Content-Type": "application/json" },
+      body: JSON.stringify({ contents: [{ parts }] })
+    }
+  );
+
+  const data = await aiRes.json();
+  const reply =
+    data.candidates?.[0]?.content?.parts?.[0]?.text || "（我暫時無法回應）";
+
+  addMsg(reply, "bot");
+}
+
+/* 加訊息（氣泡） */
+function addMsg(text, type) {
+  const box = document.getElementById("chat-box");
+  const div = document.createElement("div");
+  div.className = "msg " + type;
+  div.textContent = text;
+  box.appendChild(div);
+  box.scrollTop = box.scrollHeight;
+}
+</script>
