--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="zh-TW">
 <head>
   <meta charset="UTF-8" />
-  <title>AI 行事曆 + 聊天助手（HuggingFace 版）</title>
+  <title>AI 行事曆 + 聊天助手（HF 匿名版）</title>
+
   <style>
     body {
       margin: 0;
@@ -14,52 +15,54 @@
       padding: 40px;
     }
 
-    .logo {
-      font-size: 28px;
-      font-weight: bold;
-      color: #00eaff;
-      text-shadow: 0 0 10px #00eaff;
-      margin-bottom: 15px;
-      text-align: center;
-    }
-
     .container {
       width: 100%;
-      max-width: 750px;
-      background: rgba(20, 30, 60, 0.6);
+      max-width: 760px;
+      background: rgba(20, 30, 60, 0.55);
       padding: 30px;
       border-radius: 20px;
       border: 1px solid rgba(0, 200, 255, 0.4);
-      box-shadow: 0 0 25px rgba(0, 200, 255, 0.25);
+      box-shadow: 0 0 25px rgba(0, 200, 255, 0.20);
       backdrop-filter: blur(12px);
+    }
+
+    .logo {
+      font-size: 28px;
+      font-weight: bold;
+      text-align: center;
+      color: #00eaff;
+      text-shadow: 0 0 12px #00eaff;
+      margin-bottom: 5px;
     }
 
     h1 {
       text-align: center;
-      color: #00d9ff;
-      text-shadow: 0 0 10px #00d9ff;
       margin-top: 0;
+      font-size: 25px;
+      color: #8be7ff;
+      text-shadow: 0 0 8px #00aaff;
     }
 
+    /* 對話框 */
     #chat-box {
       height: 420px;
       overflow-y: auto;
       padding: 15px;
-      background: rgba(255,255,255,0.05);
+      background: rgba(255,255,255,0.06);
       border-radius: 12px;
       border: 1px solid rgba(0,200,255,0.3);
       margin-bottom: 15px;
       display: flex;
       flex-direction: column;
-      gap: 10px;
+      gap: 12px;
     }
 
     .msg {
+      padding: 12px 15px;
       max-width: 80%;
-      padding: 12px 14px;
       border-radius: 12px;
-      line-height: 1.5;
       font-size: 15px;
+      line-height: 1.5;
     }
 
     .me {
@@ -75,6 +78,7 @@
       border-bottom-left-radius: 2px;
     }
 
+    /* 下方輸入欄 */
     .chat-area {
       display: flex;
       gap: 10px;
@@ -83,9 +87,10 @@
     #chat-input {
       flex: 1;
       padding: 12px;
-      border-radius: 8px;
-      font-size: 16px;
+      border-radius: 10px;
       border: none;
+      outline: none;
+      font-size: 16px;
     }
 
     .img-btn {
@@ -112,41 +117,44 @@
       font-size: 17px;
       font-weight: bold;
       cursor: pointer;
+      transition: 0.2s;
     }
-
+    button:hover {
+      background: #00e5ff;
+      box-shadow: 0 0 10px #00e5ff;
+    }
   </style>
 </head>
 
 <body>
-  <div class="container">
 
+  <div class="container">
     <div class="logo">🛸 AI Schedule（HF 版）</div>
     <h1>聊天 + 看圖助手</h1>
 
     <div id="chat-box"></div>
 
     <div class="chat-area">
-      <input id="chat-input" placeholder="輸入訊息..." />
+      <input id="chat-input" placeholder="輸入訊息…" />
       <label class="img-btn">
         📷
-        <input type="file" id="chat-img" style="display:none;">
+        <input type="file" id="chat-img" accept="image/*" style="display:none;">
       </label>
     </div>
 
     <button onclick="sendChat()">送出</button>
-
   </div>
 
   <script>
-    const HF_API = "https://api-inference.huggingface.co/models/llava-hf/llava-1.5-7b-hf";
+    /* 匿名 HuggingFace API（永遠不用金鑰） */
+    const HF_API = "https://llava-next.hf.space/llava/api";
 
-    // 添加訊息到對話框
     function addMsg(text, type) {
       const box = document.getElementById("chat-box");
-      const div = document.createElement("div");
-      div.className = "msg " + type;
-      div.textContent = text;
-      box.appendChild(div);
+      const msg = document.createElement("div");
+      msg.className = "msg " + type;
+      msg.textContent = text;
+      box.appendChild(msg);
       box.scrollTop = box.scrollHeight;
     }
 
@@ -160,37 +168,32 @@
       if (text) addMsg(text, "me");
       input.value = "";
 
-      let formData;
-
-      if (img) {
-        addMsg("📷 圖片已上傳，正在分析...", "me");
-        formData = new FormData();
-        formData.append("image", img);
-        formData.append("prompt", text || "描述這張圖。");
-      } else {
-        formData = JSON.stringify({
-          inputs: text
-        });
-      }
-
       addMsg("⏳ AI 正在思考...", "bot");
 
-      const response = await fetch(HF_API, {
-        method: "POST",
-        headers: img ? {} : { "Content-Type": "application/json" }
-      , body: formData });
+      const formData = new FormData();
+      formData.append("prompt", text || "請描述這張圖片");
 
-      const result = await response.json();
+      if (img) {
+        formData.append("image", img);
+      }
+
+      const res = await fetch(HF_API, {
+        method: "POST",
+        body: formData
+      });
 
       let reply = "（AI 無法回應）";
-
-      if (typeof result === "object") {
-        reply = result.generated_text || result[0]?.generated_text || reply;
+      try {
+        const data = await res.json();
+        reply = data.response || reply;
+      } catch (e) {
+        reply = "AI 回傳格式錯誤，請再試一次";
       }
 
       addMsg(reply, "bot");
-    }
 
+      document.getElementById("chat-img").value = "";
+    }
   </script>
 
 </body>
