--- a/index.html
+++ b/index.html
@@ -1,206 +1,201 @@
 <!DOCTYPE html>
 <html lang="zh-TW">
 <head>
-  <meta charset="UTF-8" />
-  <title>AI 行事曆 + 看圖聊天（LLaVA-Next-4B – WebLLM）</title>
+<meta charset="UTF-8">
+<title>AI 行事曆 + 聊天助手（GPT-4o mini 匿名版）</title>
 
-  <!-- WebLLM -->
-  <script src="https://cdn.jsdelivr.net/npm/@mlc-ai/web-llm@0.2.51/dist/index.min.js"></script>
+<style>
+  body {
+    margin: 0;
+    background: #0a0f24;
+    color: #e2e8f0;
+    font-family: "Segoe UI", sans-serif;
+    padding: 40px;
+    display: flex;
+    justify-content: center;
+  }
 
-  <style>
-    body {
-      margin: 0;
-      font-family: "Segoe UI", sans-serif;
-      background: #0a0f24;
-      color: #e2e8f0;
-      display: flex;
-      justify-content: center;
-      padding: 40px;
-    }
+  .container {
+    width: 100%;
+    max-width: 750px;
+    background: rgba(20,30,60,0.6);
+    padding: 30px;
+    border-radius: 20px;
+    border: 1px solid rgba(0,200,255,0.4);
+    box-shadow: 0 0 25px rgba(0,200,255,0.25);
+    backdrop-filter: blur(12px);
+  }
 
-    .container {
-      width: 100%;
-      max-width: 760px;
-      background: rgba(20, 30, 60, 0.55);
-      padding: 30px;
-      border-radius: 20px;
-      border: 1px solid rgba(0, 200, 255, 0.4);
-      box-shadow: 0 0 25px rgba(0, 200, 255, 0.20);
-      backdrop-filter: blur(12px);
-    }
+  .logo {
+    font-size: 28px;
+    font-weight: bold;
+    text-align: center;
+    color: #00eaff;
+    text-shadow: 0 0 12px #00eaff;
+  }
 
-    .logo {
-      font-size: 28px;
-      font-weight: bold;
-      text-align: center;
-      color: #00eaff;
-      text-shadow: 0 0 12px #00eaff;
-      margin-bottom: 10px;
-    }
+  h1 {
+    text-align: center;
+    margin-top: 5px;
+    color: #8be7ff;
+  }
 
-    h1 {
-      text-align: center;
-      margin-top: 0;
-      font-size: 24px;
-      color: #8be7ff;
-      text-shadow: 0 0 8px #00aaff;
-    }
+  #chat-box {
+    height: 420px;
+    overflow-y: auto;
+    background: rgba(255,255,255,0.06);
+    border: 1px solid rgba(0,200,255,0.35);
+    padding: 15px;
+    border-radius: 12px;
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+    margin-bottom: 15px;
+  }
 
-    #chat-box {
-      height: 420px;
-      overflow-y: auto;
-      padding: 15px;
-      background: rgba(255,255,255,0.06);
-      border-radius: 12px;
-      border: 1px solid rgba(0,200,255,0.3);
-      margin-bottom: 15px;
-      display: flex;
-      flex-direction: column;
-      gap: 12px;
-    }
+  .msg {
+    padding: 12px 14px;
+    max-width: 80%;
+    border-radius: 12px;
+    font-size: 15px;
+    line-height: 1.5;
+  }
 
-    .msg {
-      padding: 12px 15px;
-      max-width: 80%;
-      border-radius: 12px;
-      font-size: 15px;
-      line-height: 1.5;
-    }
+  .me {
+    background: #00c2ff;
+    color: #000;
+    align-self: flex-end;
+  }
 
-    .me {
-      background: #00c2ff;
-      color: #000;
-      align-self: flex-end;
-      border-bottom-right-radius: 2px;
-    }
+  .bot {
+    background: rgba(255,255,255,0.15);
+    border: 1px solid rgba(0,200,255,0.4);
+  }
 
-    .bot {
-      background: rgba(255,255,255,0.15);
-      border: 1px solid rgba(0,200,255,0.4);
-      border-bottom-left-radius: 2px;
-    }
+  .chat-area {
+    display: flex;
+    gap: 10px;
+  }
 
-    .chat-area {
-      display: flex;
-      gap: 10px;
-    }
+  #input {
+    flex: 1;
+    padding: 12px;
+    border-radius: 10px;
+    border: none;
+    font-size: 16px;
+  }
 
-    #chat-input {
-      flex: 1;
-      padding: 12px;
-      border-radius: 10px;
-      border: none;
-      outline: none;
-      font-size: 16px;
-    }
+  .img-btn {
+    width: 50px;
+    height: 50px;
+    background: rgba(0,200,255,0.35);
+    border-radius: 10px;
+    border: 1px solid rgba(0,200,255,0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+  }
 
-    .img-btn {
-      width: 50px;
-      height: 50px;
-      background: rgba(0,200,255,0.35);
-      border-radius: 10px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      cursor: pointer;
-      border: 1px solid rgba(0,200,255,0.5);
-      font-size: 20px;
-    }
+  button {
+    margin-top: 15px;
+    width: 100%;
+    padding: 15px;
+    border-radius: 10px;
+    background: #00c2ff;
+    border: none;
+    font-size: 17px;
+    font-weight: bold;
+    cursor: pointer;
+  }
+</style>
 
-    button {
-      width: 100%;
-      margin-top: 15px;
-      padding: 15px;
-      background: #00c2ff;
-      color: #000;
-      border: none;
-      border-radius: 10px;
-      font-size: 17px;
-      font-weight: bold;
-      cursor: pointer;
-      transition: 0.2s;
-    }
-  </style>
 </head>
 
 <body>
+<div class="container">
 
-  <div class="container">
-    <div class="logo">🛸 AI Schedule（LLaVA-Next-4B）</div>
-    <h1>聊天 + 看圖助手（免 API Key）</h1>
+  <div class="logo">🛸 AI Schedule（GPT-4o mini）</div>
+  <h1>行事曆解析 + 看圖聊天（免 API Key）</h1>
 
-    <div id="chat-box"></div>
+  <div id="chat-box"></div>
 
-    <div class="chat-area">
-      <input id="chat-input" placeholder="輸入訊息…" />
-      <label class="img-btn">
-        📷
-        <input type="file" id="chat-img" accept="image/*" style="display:none;">
-      </label>
-    </div>
-
-    <button onclick="sendChat()">送出</button>
+  <div class="chat-area">
+    <input id="input" placeholder="輸入訊息…" />
+    <label class="img-btn">
+      📷
+      <input id="img" type="file" accept="image/*" style="display:none;">
+    </label>
   </div>
 
+  <button onclick="send()">送出</button>
+
+</div>
 
 <script>
-let engine = null;
-let imageData = null;
-const chatBox = document.getElementById("chat-box");
+const API_URL = "https://openai-proxy.ayaka14732.workers.dev/v1/chat/completions";
 
+let imageBase64 = null;
+
+// 顯示訊息
 function addMsg(text, type) {
-  const div = document.createElement("div");
-  div.className = "msg " + type;
-  div.textContent = text;
-  chatBox.appendChild(div);
-  chatBox.scrollTop = chatBox.scrollHeight;
+  const box = document.getElementById("chat-box");
+  const m = document.createElement("div");
+  m.className = "msg " + type;
+  m.textContent = text;
+  box.appendChild(m);
+  box.scrollTop = box.scrollHeight;
 }
 
-async function loadModel() {
-  addMsg("⏳ 載入 LLaVA-Next-4B 模型中…（約 8～15 秒）", "bot");
-
-  engine = await webllm.createMLCEngine({
-    model: "LLaVA-NeXT-4B-q4f16_1-MLC",
-    prefix: "https://huggingface.co/mlc-ai/web-llm-models/resolve/main/",
-  });
-
-  addMsg("✨ 模型載入完成！可以開始聊天囉～", "bot");
-}
-
-document.getElementById("chat-img").addEventListener("change", e => {
+// 圖片讀取
+document.getElementById("img").addEventListener("change", e => {
   const file = e.target.files[0];
-  if (!file) return;
-
   const reader = new FileReader();
   reader.onload = () => {
-    imageData = reader.result;
-    addMsg("📷 已選取圖片", "me");
+    imageBase64 = reader.result.split(",")[1];
+    addMsg("📷 已上傳圖片", "me");
   };
   reader.readAsDataURL(file);
 });
 
-async function sendChat() {
-  const text = document.getElementById("chat-input").value.trim();
-  if (!text && !imageData) return;
+// 傳送
+async function send() {
+  const text = document.getElementById("input").value.trim();
+  const box = document.getElementById("input");
+  box.value = "";
+
+  if (!text && !imageBase64) return;
 
   if (text) addMsg(text, "me");
-  document.getElementById("chat-input").value = "";
 
   addMsg("⏳ AI 正在思考…", "bot");
 
-  const messages = [{ role: "user", content: text || "描述這張圖片。" }];
+  const parts = [{ type: "text", text }];
 
-  const output = await engine.chat({
-    messages: messages,
-    images: imageData ? [imageData] : undefined,
+  if (imageBase64) {
+    parts.push({
+      type: "image_url",
+      image_url: "data:image/jpeg;base64," + imageBase64
+    });
+  }
+
+  const res = await fetch(API_URL, {
+    method: "POST",
+    headers: {"Content-Type": "application/json"},
+    body: JSON.stringify({
+      model: "gpt-4o-mini",
+      messages: [{ role: "user", content: parts }]
+    })
   });
 
-  addMsg(output, "bot");
-  imageData = null;
-  document.getElementById("chat-img").value = "";
-}
+  const json = await res.json();
+  const reply = json.choices?.[0]?.message?.content || "（AI 無法回應）";
 
-loadModel();
+  addMsg(reply, "bot");
+
+  imageBase64 = null;
+  document.getElementById("img").value = "";
+}
 </script>
 
 </body>
